# Project-3

./: .gitignore  CMakeLists.txt  README.md
CryptoCalc 3/: Testing.txt
CryptoCalc 3/data/: historical_prices.txt  transactions.txt
CryptoCalc 3/include/: CryptoCalculator.hpp  FileLoader.hpp  IFileHandler.hpp  IMarketSimulator.hpp  PriceLoader.hpp  PricePoint.hpp  Transaction.hpp  TransactionLoader.hpp
CryptoCalc 3/src/: CryptoCalculator.cpp  FileHandler.cpp  PriceLoader.cpp  PricePoint.cpp  Transaction.cpp  TransactionLoader.cpp  main.cpp
CryptoCalc/data/: transactions.txt
CryptoCalc/include/: FileHandler.hpp  RandomMarketSimulator.hpp  Transaction.hpp
CryptoCalc/src/: RandomMarketSimulator.cpp  Transaction.cpp  main.cpp
test/: Transaction_test.cpp
